--- a/Assignment 1/Assignment1.ipynb
+++ b/Assignment 1/Assignment1.ipynb
@@ -434,6 +434,13 @@
         "    mean_lengths.append(sum(lengths) / len(lengths))\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The average length of a tokenized sentence of Russian text is shorter than the average length of a tokenized tweet, since Eugene Onegin's poem contains only punctuation marks and mostly spaces, and tweets may contain rare emoticons and unique nicknames"
+      ]
     }
   ],
   "metadata": {
