--- a/Assignment 1/Assignment1.ipynb
+++ b/Assignment 1/Assignment1.ipynb
@@ -394,6 +394,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "More vocab size -> less length of tokenized tweets -> better subword tokenization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Task 2.3. Analysis on Dataset of Different Language (10 points)\n",
         "\n",
         "Find a small dataset of texts in a language other than English. The dataset size should be not greater than several megabytes.\n",
